--- a/Notas/Numpy_Array.ipynb
+++ b/Notas/Numpy_Array.ipynb
@@ -138,7 +138,8 @@
    "source": [
     "# RETO\n",
     "\n",
-    "Crear una matriz de 3 dimensiones."
+    "Crear una matriz de 3 dimensiones.\n",
+    "- Comprueba el indexado."
    ]
   },
   {
