--- a/Notas/Numpy/Operaciones.ipynb
+++ b/Notas/Numpy/Operaciones.ipynb
@@ -249,6 +249,13 @@
    "source": [
     "matriz @ matriz2.T"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[Mas Operaciones ](https://numpy.org/doc/stable/user/absolute_beginners.html#basic-array-operations)"
+   ]
   }
  ],
  "metadata": {
