--- a/Notas/Pandas/Funciones_Principales.ipynb
+++ b/Notas/Pandas/Funciones_Principales.ipynb
@@ -1056,6 +1056,27 @@
    "source": [
     "[Funciones Principales - Documentación](https://pandas.pydata.org/docs/user_guide/10min.html)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df_books' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m df_books\u001b[38;5;241m.\u001b[39mdropna()\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'df_books' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "df_books.dropna() # Eliminar Na normal axis 0 "
+   ]
   }
  ],
  "metadata": {
